--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -157,19 +157,26 @@
       <h2 class="custom_heading">
         Services Offered
       </h2>
-    </div>
+    </div><br><br><br>
+    <H4><i>
+          <center><p style="color: dark gray;">Massage therapy</p></center>
+          </H4></i>
     <div class="container layout_padding2">
       <div class="img-box box-1">
-        <img src="images/p-1.jpg" alt="">
+        <img src="images/massagetherapy.jpg" class="responsive" alt="">
       </div>
       <div class="img-box box-2">
-        <img src="images/p-2.jpg" alt="">
+        <img src="images/massagetherapy2.jpeg" alt="">
       </div>
+      <br><br><br>
+    <H4><i><BR><BR><BR>
+          <center><p style="color: dark gray;">Relaxation Massage</p></center>
+          </H4></i><BR><BR><BR>
       <div class="img-box box-3">
-        <img src="images/p-3.jpg" alt="">
+        <img src="" alt="">
       </div>
       <div class="img-box box-4">
-        <img src="images/p-4.jpg" alt="">
+        <img src="" alt="">
       </div>
     </div>
     <div class="d-flex justify-content-center">
@@ -188,17 +195,17 @@
     <div class="container">
       <div class="d-flex flex-column align-items-center text-center">
         <h2 class="custom_heading ">
-          Why choose Us
+          Why Choose Us
         </h2>
         <p class="">
          Our team is highly trained, compassionate, and committed to providing the best therapeutic experience tailored to your needs.
-        No two bodies are the same. We take time to listen to you and understand your goals, ensuring each session is focused on the areas that need it most.
+        <br>No two bodies are the same. We take time to listen to you and understand your goals, ensuring each session is focused on the areas that need it most.
         </p>
       </div>
     </div>
     <div class="why_container my-4">
       <div class="img_box">
-        <img src="images/why-img.jpg" alt="">
+        <img src="images/CUPSTONEBG.jpg" alt="">
       </div>
     </div>
     <div class="d-flex justify-content-center">
@@ -229,9 +236,9 @@
           <div>
             <input type="email" placeholder="Email" />
           </div>
-          <div>
+          <!--<div>
             <input type="text" placeholder="Pone Number" />
-          </div>
+          </div> -->
           <div>
             <input type="text" class="message-box" placeholder="Message" />
           </div>
